Changed the index.html file for correct displaying images

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <div id="root"></div>
     <article class="content">
       <a href="/" class="content__logo">
-        <img src="/images/logo.svg" alt="" class="content__logo-image" />
+        <img src="./images/logo.svg" alt="" class="content__logo-image" />
       </a>
       <p class="content__description">
         To-do list is&nbsp;a&nbsp;project for practice in&nbsp;development with
@@ -30,7 +30,11 @@
             placeholder="Your task"
           />
           <button class="todo-form__submit">
-            <img src="/images/plus.svg" alt="" class="todo-form__submit-icon" />
+            <img
+              src="./images/plus.svg"
+              alt=""
+              class="todo-form__submit-icon"
+            />
           </button>
         </form>
         <ul class="todo__list">
@@ -39,7 +43,7 @@
             <label for="check1" class="todo-item__title">Buy a milk</label>
             <button class="todo-item__delete">
               <img
-                src="/images/trash.svg"
+                src="./images/trash.svg"
                 alt=""
                 class="todo-item__delete-icon"
               />
@@ -52,7 +56,7 @@
             >
             <button class="todo-item__delete">
               <img
-                src="/images/trash.svg"
+                src="./images/trash.svg"
                 alt=""
                 class="todo-item__delete-icon"
               />
@@ -65,7 +69,7 @@
             >
             <button class="todo-item__delete">
               <img
-                src="/images/trash.svg"
+                src="./images/trash.svg"
                 alt=""
                 class="todo-item__delete-icon"
               />
@@ -78,7 +82,7 @@
             >
             <button class="todo-item__delete">
               <img
-                src="/images/trash.svg"
+                src="./images/trash.svg"
                 alt=""
                 class="todo-item__delete-icon"
               />
