--- a/index.html
+++ b/index.html
@@ -1,99 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ToDoList</title>
-  </head>
-  <body class="page">
-    <div id="root"></div>
-    <article class="content">
-      <a href="/" class="content__logo">
-        <img src="/images/logo.svg" alt="" class="content__logo-image" />
-      </a>
-      <p class="content__description">
-        To-do list is&nbsp;a&nbsp;project for practice in&nbsp;development with
-        React. <br />You can view the code in&nbsp;<a
-          href="https://github.com/jekyenin/react-todo"
-          target="_blank"
-          class="link"
-          >the repository</a
-        >.
-      </p>
-      <section class="todo">
-        <form class="todo-form todo__form">
-          <input
-            type="text"
-            class="todo-form__input"
-            autofocus
-            placeholder="Your task"
-          />
-          <button class="todo-form__submit">
-            <img src="/images/plus.svg" alt="" class="todo-form__submit-icon" />
-          </button>
-        </form>
-        <ul class="todo__list">
-          <li class="todo__item todo-item">
-            <input id="check1" type="checkbox" class="todo-item__input" />
-            <label for="check1" class="todo-item__title">Buy a milk</label>
-            <button class="todo-item__delete">
-              <img
-                src="/images/trash.svg"
-                alt=""
-                class="todo-item__delete-icon"
-              />
-            </button>
-          </li>
-          <li class="todo__item todo-item">
-            <input id="check2" type="checkbox" class="todo-item__input" />
-            <label for="check2" class="todo-item__title"
-              >Buy a colorful magnets</label
-            >
-            <button class="todo-item__delete">
-              <img
-                src="/images/trash.svg"
-                alt=""
-                class="todo-item__delete-icon"
-              />
-            </button>
-          </li>
-          <li class="todo__item todo-item">
-            <input id="check3" type="checkbox" class="todo-item__input" />
-            <label for="check3" class="todo-item__title"
-              >Draw a masterpiece</label
-            >
-            <button class="todo-item__delete">
-              <img
-                src="/images/trash.svg"
-                alt=""
-                class="todo-item__delete-icon"
-              />
-            </button>
-          </li>
-          <li class="todo__item todo-item">
-            <input id="check4" type="checkbox" class="todo-item__input" />
-            <label for="check4" class="todo-item__title"
-              >Create React App</label
-            >
-            <button class="todo-item__delete">
-              <img
-                src="/images/trash.svg"
-                alt=""
-                class="todo-item__delete-icon"
-              />
-            </button>
-          </li>
-        </ul>
-      </section>
-      <p class="content__footer-description">
-        The project was created by&nbsp;<a
-          href="https://jekyenin.github.io"
-          target="_blank"
-          class="link"
-          >Evgeniy Enin</a
-        >.
-      </p>
-    </article>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/react-todo/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>ToDoList</title><link href="/react-todo/static/css/main.c1c17d66.chunk.css" rel="stylesheet"></head><body class="page"><div id="root"></div><article class="content"><a href="/" class="content__logo"><img src="/react-todo/images/logo.svg" alt="" class="content__logo-image"/></a><p class="content__description">To-do list is&nbsp;a&nbsp;project for practice in&nbsp;development with React.<br/>You can view the code in&nbsp;<a href="https://github.com/jekyenin/react-todo" target="_blank" class="link">the repository</a>.</p><section class="todo"><form class="todo-form todo__form"><input class="todo-form__input" autofocus placeholder="Your task"/> <button class="todo-form__submit"><img src="/react-todo/images/plus.svg" alt="" class="todo-form__submit-icon"/></button></form><ul class="todo__list"><li class="todo__item todo-item"><input id="check1" type="checkbox" class="todo-item__input"/> <label for="check1" class="todo-item__title">Buy a milk</label> <button class="todo-item__delete"><img src="/react-todo/images/trash.svg" alt="" class="todo-item__delete-icon"/></button></li><li class="todo__item todo-item"><input id="check2" type="checkbox" class="todo-item__input"/> <label for="check2" class="todo-item__title">Buy a colorful magnets</label> <button class="todo-item__delete"><img src="/react-todo/images/trash.svg" alt="" class="todo-item__delete-icon"/></button></li><li class="todo__item todo-item"><input id="check3" type="checkbox" class="todo-item__input"/> <label for="check3" class="todo-item__title">Draw a masterpiece</label> <button class="todo-item__delete"><img src="/react-todo/images/trash.svg" alt="" class="todo-item__delete-icon"/></button></li><li class="todo__item todo-item"><input id="check4" type="checkbox" class="todo-item__input"/> <label for="check4" class="todo-item__title">Create React App</label> <button class="todo-item__delete"><img src="/react-todo/images/trash.svg" alt="" class="todo-item__delete-icon"/></button></li></ul></section><p class="content__footer-description">The project was created by&nbsp;<a href="https://jekyenin.github.io" target="_blank" class="link">Evgeniy Enin</a>.</p></article><script>!function(e){function t(t){for(var n,a,l=t[0],c=t[1],f=t[2],p=0,s=[];p<l.length;p++)a=l[p],Object.prototype.hasOwnProperty.call(o,a)&&o[a]&&s.push(o[a][0]),o[a]=0;for(n in c)Object.prototype.hasOwnProperty.call(c,n)&&(e[n]=c[n]);for(i&&i(t);s.length;)s.shift()();return u.push.apply(u,f||[]),r()}function r(){for(var e,t=0;t<u.length;t++){for(var r=u[t],n=!0,l=1;l<r.length;l++){var c=r[l];0!==o[c]&&(n=!1)}n&&(u.splice(t--,1),e=a(a.s=r[0]))}return e}var n={},o={1:0},u=[];function a(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,a),r.l=!0,r.exports}a.m=e,a.c=n,a.d=function(e,t,r){a.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},a.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},a.t=function(e,t){if(1&t&&(e=a(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(a.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)a.d(r,n,function(t){return e[t]}.bind(null,n));return r},a.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return a.d(t,"a",t),t},a.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},a.p="/react-todo/";var l=this["webpackJsonpreact-todo"]=this["webpackJsonpreact-todo"]||[],c=l.push.bind(l);l.push=t,l=l.slice();for(var f=0;f<l.length;f++)t(l[f]);var i=c;r()}([])</script><script src="/react-todo/static/js/2.6eceb298.chunk.js"></script><script src="/react-todo/static/js/main.3f7730df.chunk.js"></script></body></html>
