Add gh-pages for deploy project. Changed some files to display correctly.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,11 @@
     <div id="root"></div>
     <article class="content">
       <a href="/" class="content__logo">
-        <img src="./images/logo.svg" alt="" class="content__logo-image" />
+        <img
+          src="%PUBLIC_URL%/images/logo.svg"
+          alt=""
+          class="content__logo-image"
+        />
       </a>
       <p class="content__description">
         To-do list is&nbsp;a&nbsp;project for practice in&nbsp;development with
@@ -31,7 +35,7 @@
           />
           <button class="todo-form__submit">
             <img
-              src="./images/plus.svg"
+              src="%PUBLIC_URL%/images/plus.svg"
               alt=""
               class="todo-form__submit-icon"
             />
@@ -43,7 +47,7 @@
             <label for="check1" class="todo-item__title">Buy a milk</label>
             <button class="todo-item__delete">
               <img
-                src="./images/trash.svg"
+                src="%PUBLIC_URL%/images/trash.svg"
                 alt=""
                 class="todo-item__delete-icon"
               />
@@ -56,7 +60,7 @@
             >
             <button class="todo-item__delete">
               <img
-                src="./images/trash.svg"
+                src="%PUBLIC_URL%/images/trash.svg"
                 alt=""
                 class="todo-item__delete-icon"
               />
@@ -69,7 +73,7 @@
             >
             <button class="todo-item__delete">
               <img
-                src="./images/trash.svg"
+                src="%PUBLIC_URL%/images/trash.svg"
                 alt=""
                 class="todo-item__delete-icon"
               />
@@ -82,7 +86,7 @@
             >
             <button class="todo-item__delete">
               <img
-                src="./images/trash.svg"
+                src="%PUBLIC_URL%/images/trash.svg"
                 alt=""
                 class="todo-item__delete-icon"
               />
